--- a/index.html
+++ b/index.html
@@ -1,36 +1,41 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <!-- Primary Meta Tags -->
-    <title>Lexacta - Gestión Jurídica Integral & Inteligente</title>
-    <meta name="title" content="Lexacta - Gestión Jurídica Integral & Inteligente" />
-    <meta name="description" content="Plataforma Enterprise de gestión jurídica con Inteligencia Artificial auditable. Potencie su firma con automatización de expedientes y procuración autónoma." />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://lexacta.com/" />
-    <meta property="og:title" content="Lexacta - Gestión Jurídica Integral & Inteligente" />
-    <meta property="og:description" content="Plataforma Enterprise de gestión jurídica con Inteligencia Artificial auditable. Potencie su firma con automatización de expedientes y procuración autónoma." />
-    <meta property="og:image" content="https://lexacta.com/og-image.jpg" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://lexacta.com/" />
-    <meta property="twitter:title" content="Lexacta - Gestión Jurídica Integral & Inteligente" />
-    <meta property="twitter:description" content="Plataforma Enterprise de gestión jurídica con Inteligencia Artificial auditable. Potencie su firma con automatización de expedientes y procuración autónoma." />
-    <meta property="twitter:image" content="https://lexacta.com/og-image.jpg" />
+  <!-- Primary Meta Tags -->
+  <title>Lexacta - Gestión Jurídica Integral & Inteligente</title>
+  <meta name="title" content="Lexacta - Gestión Jurídica Integral & Inteligente" />
+  <meta name="description"
+    content="Plataforma Enterprise de gestión jurídica con Inteligencia Artificial auditable. Potencie su firma con automatización de expedientes y procuración autónoma." />
 
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lexacta.com/" />
+  <meta property="og:title" content="Lexacta - Gestión Jurídica Integral & Inteligente" />
+  <meta property="og:description"
+    content="Plataforma Enterprise de gestión jurídica con Inteligencia Artificial auditable. Potencie su firma con automatización de expedientes y procuración autónoma." />
+  <meta property="og:image" content="https://lexacta.com/og-image.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://lexacta.com/" />
+  <meta property="twitter:title" content="Lexacta - Gestión Jurídica Integral & Inteligente" />
+  <meta property="twitter:description"
+    content="Plataforma Enterprise de gestión jurídica con Inteligencia Artificial auditable. Potencie su firma con automatización de expedientes y procuración autónoma." />
+  <meta property="twitter:image" content="https://lexacta.com/og-image.jpg" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
