feat: Add SEO enhancements with meta tags, structured data, robots.txt, and sitemap.xml.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,36 @@
   <meta name="description"
     content="Plataforma Enterprise de gestión jurídica con Inteligencia Artificial auditable. Potencie su firma con automatización de expedientes y procuración autónoma." />
 
+  <!-- SEO & Icons -->
+  <link rel="canonical" href="https://lexacta.com/" />
+  <meta name="keywords"
+    content="software juridico, gestion expedientes, inteligencia artificial legal, procuracion automatica, lexacta, legaltech argentina, abogados, estudio juridico" />
+  <meta name="theme-color" content="#0F172A" />
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "Lexacta",
+        "applicationCategory": "BusinessApplication",
+        "operatingSystem": "Web",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/PreOrder"
+        },
+        "description": "Plataforma Enterprise de gestión jurídica con Inteligencia Artificial auditable.",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Lexacta",
+          "url": "https://lexacta.com",
+          "logo": "https://lexacta.com/logo.svg"
+        }
+      }
+    </script>
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://lexacta.com/" />
